Fix glyph filter z-indexing bug
Fixes #1362

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -6927,6 +6927,7 @@ kbd {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  z-index: 5;
 }
 
 .l-glyphs-tab {
